Horizontal Scrolling issue fixed for History timeline Component.

--- a/src/assets/scss/components/_history-timeline.scss
+++ b/src/assets/scss/components/_history-timeline.scss
@@ -55,6 +55,7 @@ $orange: #ff9900;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 .timeline {
